# pydynpd

./: .gitignore  Info.py  LICENSE  Main.py  Main2.py  README.md  System_GMM.py  Tests.py  build_upload.sh  command.c  command.html  command.py  command.pyx  common_functions.py  dynamic_panel_data_model.c  dynamic_panel_data_model.html  dynamic_panel_data_model.pyx  output.html  panel_data.c  panel_data.html  panel_data.py  panel_data.pyx  regression.py  setup.cfg  setup.p_y  setup.py  test.py  variable - Copy.___py_x  variable.html  variable.py
Benchmark/: R.R  bench1.txt  bench2.txt  benchmark.md  benchmark.py  data_gen.R  performance comparison.md  performance-comparison.html  performance_comparison.md  test_1.md  test_2.md
Benchmark/code/: bench2.txt  benchmark.py  data.csv  data_gen.R  stata.do  test3.R  test_data.csv
pydynpd/: command.py  common_functions.py  dynamic_panel_model.py  info.py  instruments.py  model_organizer.py  model_summary.py  multicollinearity.py  panel_data.py  regression.py  specification_tests.py  variable.py
pydynpd.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
pydynpd/sandbox/: multicollinearity.py
pydynpd/sandbox/pydynpd/: LICENSE  Main.py  contributing.md  test.py  untitled.md
pydynpd/sandbox/pydynpd/pydynpd/: CMakeCache.txt  CMakeLists.txt  common_functions.py  dynamic_panel_model.py  info.py  model_summary.py  panel_data.py  regression.py
pydynpd/sandbox/pydynpd/pydynpd/cpp/: CMakeLists.txt  Command.cpp  Command.h  Common_Functions.cpp  Common_Functions.h  GMM.cpp  GMM.h  List_Variables.cpp  List_Variables.h  Specification_Test.cpp  Specification_Test.h  Step_Result.cpp  Step_Result.h  dynamic_model.cpp  dynamic_model.h  dynpd.h  info.cpp  info.h  instruments.cpp  instruments.h  variable.cpp  variable.h  wrap.cpp
src/pydynpd/: info.py  multicollinearity.py  regression.py
src/pydynpd_YOUR_USERNAME_HERE.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
vignettes/: API.md  Diagrams.drawio  Guide.ipynb  Tutorial.ipynb  guide.ipnb  guide.ipynb  paper.md  pydynpd.html  pydynpd.md  ref.bib
vignettes/.ipynb_checkpoints/: Guide-checkpoint.ipynb  Tutorial-checkpoint.ipynb
vignettes/Images/: .$pydynpd.drawio.dtmp  pydynpd.drawio
