[metadata]
name = pydynpd-dazhwu
version = 0.0.1
author = Example Author
author_email = wudz800@gmail.com
description = A package to estimate dynamic panel data model using difference GMM and system GMM
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dazhwu/pydynpd
project_urls =
    Bug Tracker = https://github.com/dazhwu/pydynpd/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src